# sphinx-tsegsearch

./: CHANGES.rst  README.rst  pyproject.toml  setup.py
sphinx_tsegsearch/: __init__.py
sphinx_tsegsearch/static/: splitQuery.js
sphinx_tsegsearch/templates/: search.html
